Hopefully Fix Double Scrollbar

--- a/intranet/static/css/signage.base.scss
+++ b/intranet/static/css/signage.base.scss
@@ -15,7 +15,7 @@ section.signage-section {
 
     width: 100vw;
     height: 100vh;
-    overflow: scroll;
+    overflow: hidden;
 
     transition: transform 0.2s ease-in-out;
     transform: translateX(100%);
